fix: increase width of stats skeleton for better alignment

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -277,7 +277,7 @@
 .stats-skeleton {
   background-color: var(--zap-stats-skeleton-bg);
   height: 23px;
-  width: 100px;
+  width: 110px;
 }
 
 /* Skeleton for Zap events */
